rate limiter, security

--- a/backend/utils/email_templates/tickets.html
+++ b/backend/utils/email_templates/tickets.html
@@ -58,14 +58,14 @@
         <div class="ticket-details">
             <h2>Movie Ticket</h2>
             <ul class="details">
-                <li><span>Name:</span> ##{name}</li>
-                <li><span>Movie:</span> ##{movie}</li>
-                <li><span>Theatre:</span> ##{theatre}</li>
-                <li><span>Date:</span> ##{date}</li>
-                <li><span>Time:</span> ##{time}</li>
-                <li><span>Seats NOs:</span> ##{seats}</li>
-                <li><span>Amount:</span> Rs. ##{amount} </li>
-                <li><span>Transaction ID:</span> ##{transactionId}</li>
+                <li><span>Name:</span> ##name</li>
+                <li><span>Movie:</span> ##movie</li>
+                <li><span>Theatre:</span> ##theatre</li>
+                <li><span>Date:</span> ##date</li>
+                <li><span>Time:</span> ##time</li>
+                <li><span>Seats NOs:</span> ##seats</li>
+                <li><span>Amount:</span> Rs. ##amount </li>
+                <li><span>Transaction ID:</span> ##transactionId</li>
             </ul>
         </div>
         <div class="footer">
