--- a/backend/utils/email_templates/otp.html
+++ b/backend/utils/email_templates/otp.html
@@ -58,7 +58,7 @@
         <div class="header">
             <h2>RESET PASSWORD Verification OTP</h2>
         </div>
-        <h2>Hi ##{name} </h2>
+        <h2>Hi ##name </h2>
         <div class="content">
             <p>Your One-Time Password (OTP) for reseting the password :</p>
             <table>
@@ -67,7 +67,7 @@
                         <!-- Top rounded corners -->
                         <div class="otp">
                             <!-- OTP placeholder -->
-                            ##{otp}
+                            ##otp
                             <!-- Replace this with the actual OTP generated -->
                         </div>
                     </td>
